demos/service-extensions-gke-gateway/k8s/gateway-internal/gateway.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: internal-gateway
    labels:
        app.kubernetes.io/name: internal-gateway
        app.kubernetes.io/component: api-gateway
spec:
    gatewayClassName: gke-l7-rilb
    listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
              namespaces:
                  from: All
        - name: https
          protocol: HTTPS
          port: 443
          tls:
              mode: Terminate
              options:
                  networking.gke.io/cert-manager-certs: internal-certificate-regional
          allowedRoutes:
              kinds:
                  - kind: HTTPRoute
              namespaces:
                  from: All
    addresses:
        - type: NamedAddress
          value: gateway-internal-gateway-ip
